improved csv import performance

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -61,7 +61,7 @@
 &#8226; Changed the application icon (thanks, Jay!)\n
 &#8226; Added options in search menu for hiding transactions based on posted status\n
 &#8226; Enabled fast-scrolling on the transaction list\n
-&#8226; Added widgets to display account information and provide quick access (Premium)\n
+&#8226; Added widgets to display account information and provide quick access to accounts(Premium)\n
 &#8226; Added ability to attach images/receipts to transactions (Premium)\n
 	    </item>
 	    <item>\n
