--- a/res/layout/trans.xml
+++ b/res/layout/trans.xml
@@ -143,9 +143,11 @@
 						android:layout_height="wrap_content" android:gravity="left|center_vertical"
 						android:id="@+id/imageLabel" android:minWidth="65dip"
 						android:text="@string/receipts" android:layout_weight="1" />
-					<ImageView android:layout_width="wrap_content" android:id="@+id/addImage"
-						android:layout_height="wrap_content" android:src="@android:drawable/ic_input_add"
-						 android:layout_gravity="right|center_vertical" />
+					<ImageView android:layout_width="wrap_content"
+						android:id="@+id/addImage" android:layout_height="wrap_content"
+						android:src="@android:drawable/ic_input_add"
+						android:layout_gravity="right|center_vertical" android:minWidth="50dp"
+						android:minHeight="50dp" android:scaleType="fitXY" />
 				</TableRow>
 			</TableLayout>
 			<LinearLayout android:layout_width="fill_parent"
