--- a/res/layout/trans.xml
+++ b/res/layout/trans.xml
@@ -140,7 +140,7 @@
 				<TableRow android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:id="@+id/imageHeaderRow">
 					<TextView android:layout_width="wrap_content"
-						android:layout_height="wrap_content" android:gravity="left|center_vertical"
+						android:layout_height="fill_parent" android:gravity="left|center_vertical"
 						android:id="@+id/imageLabel" android:minWidth="65dip"
 						android:text="@string/receipts" android:layout_weight="1" />
 					<ImageView android:layout_width="wrap_content"
