--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -63,6 +63,7 @@
 &#8226; Enabled fast-scrolling on the transaction list\n
 &#8226; Added widgets to display account information and provide quick access to accounts(Premium)\n
 &#8226; Added ability to attach images/receipts to transactions (Premium)\n
+&#8226; Improved flexibility of CSV importing and exporting (Premium)\n
 	    </item>
 	    <item>\n
 &#8226; Improved display for devices with larger/denser screens\n
