added tips to the arrays

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -50,6 +50,39 @@
 		<item>Images</item>
 		<item>Camera</item>
 	</string-array>
+	<string-array name="tips">
+		<item>You can toggle between showing posted and unposted transactions
+			in the search menu.</item>
+		<item>You can change the order of columns for importing and exporting
+			CSV items through the settings.</item>
+		<item>You can change the preferred date format for importing and
+			exporting through the settings.</item>
+		<item>Loot Premium allows you to chart details for all your accounts.
+		</item>
+		<item>Changing color schemes allows you to easily differentiate
+			between different transaction types.</item>
+		<item>You can view repeating transactions through the repeat manager
+			menu option, and edit them with Loot Premium.</item>
+		<item>Loot Premium widgets allow you to see your account balance from
+			your home screen, and start directly in that account.</item>
+		<item>Marking an account as primary will allow you to start in that
+			transaction without seeing the accounts screen.</item>
+		<item>When two or more accounts are present, you are given an option
+			to transfer between accounts.</item>
+		<item>You can search for transactions based on the party name or the
+			tags.</item>
+		<item>Don't like the color choices? Set them to whatever you want with
+			Loot Premium!</item>
+		<item>You can purge posted transactions when you think you have too
+			many listed.</item>
+		<item>You can restore transactions that were previously purged (but
+			not deleted). The restore date works backwards from today, the
+			opposite way that the purge date works.</item>
+		<item>Have any tips you want to share? Send them to me and I'll try to
+			include them in future releases!</item>
+		<item>Don't want other people to see your account details? Enable the
+			security option, and always use the back key to exit.</item>
+	</string-array>
 	<string-array name="changelog">
 	    <item>\n
 &#8226; Added option for a primary account which bypasses the account screen\n
@@ -61,7 +94,7 @@
 &#8226; Changed the application icon (thanks, Jay!)\n
 &#8226; Added options in search menu for hiding transactions based on posted status\n
 &#8226; Enabled fast-scrolling on the transaction list\n
-&#8226; Added widgets to display account information and provide quick access to accounts(Premium)\n
+&#8226; Added widgets to display account information and provide quick access to accounts (Premium)\n
 &#8226; Added ability to attach images/receipts to transactions (Premium)\n
 &#8226; Improved flexibility of CSV importing and exporting (Premium)\n
 	    </item>
