--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -101,6 +101,7 @@
 &#8226; Added widgets to display account information and provide quick access to accounts (Premium)\n
 &#8226; Added ability to attach images/receipts to transactions (Premium)\n
 &#8226; Improved flexibility of CSV importing and exporting (Premium)\n
+&#8226; Added tips to help users\n
 	    </item>
 	    <item>\n
 &#8226; Improved display for devices with larger/denser screens\n
