--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -72,6 +72,10 @@
 	</string-array>
 	<string-array name="changelog">
 	    <item>\n
+&#8226; Fixed issue with reloading primary account/exiting application when rotating screen\n
+&#8226; Improved account screen loading speed\n
+	    </item>
+	    <item>\n
 &#8226; Fixed issue with primary accounts not working properly\n
 &#8226; Fixed date formatting issues with QIF imports (Premium)\n
 &#8226; Fixed widget currency symbol detection (Premium)\n
@@ -155,6 +159,7 @@
 		</item>
 	</string-array>
 	<string-array name="versions">
+	    <item>2.1.2</item>
 	    <item>2.1.1</item>
 	    <item>2.1.0</item>
 	    <item>2.0.7</item>
