added option to use small widgets version bumped to 2.1.2

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -76,6 +76,7 @@
 &#8226; Improved account screen loading speed\n
 &#8226; Added option to display different balances in widget (Premium)\n
 &#8226; Added check option to transfers\n
+&#8226; Added smaller widget (Premium)\n
 	    </item>
 	    <item>\n
 &#8226; Fixed issue with primary accounts not working properly\n
