--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -72,6 +72,9 @@
 	</string-array>
 	<string-array name="changelog">
 	    <item>\n
+&#8226; Fixed database backup and file export issues\n
+	    </item>
+	    <item>\n
 &#8226; Fixed issue with reloading primary account/exiting application when rotating screen\n
 &#8226; Improved account screen loading speed\n
 &#8226; Added option to display different balances in widget (Premium)\n
@@ -162,6 +165,7 @@
 		</item>
 	</string-array>
 	<string-array name="versions">
+	    <item>2.1.3</item>
 	    <item>2.1.2</item>
 	    <item>2.1.1</item>
 	    <item>2.1.0</item>
