--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -69,8 +69,14 @@
 		<item>Long-click on a transaction to bring up the context menu, which which allows you to edit or delete transactions, and more.</item>
 		<item>Use the repeat once option from the context menu to do an immediate, one-time repetition of a transaction.</item>
 		<item>To enter a negative  amount, start an account with a zero balance, then enter a dummy transaction to put your account in the negative. After that, if you don't want to see that transaction, click the check for it and purge the posted transactions.</item>
+		<item>Automatic backups will run 5 minutes after your most recent change when the option is enabled.</item>
 	</string-array>
 	<string-array name="changelog">
+	    <item>\n
+&#8226; Removed donation reminder\n
+&#8226; Fixed bugs related to adding widgets (Premium)\n
+&#8226; Added automatic backup option (Premium)\n
+	    </item>
 	    <item>\n
 &#8226; Fixed database backup and file export issues\n
 	    </item>
@@ -165,6 +171,7 @@
 		</item>
 	</string-array>
 	<string-array name="versions">
+	    <item>2.1.4</item>
 	    <item>2.1.3</item>
 	    <item>2.1.2</item>
 	    <item>2.1.1</item>
