fixed bi-weekly scheduling error

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -74,8 +74,11 @@
 	<string-array name="changelog">
 	    <item>\n
 &#8226; Removed donation reminder\n
+&#8226; Fixed bi-weekly scheduling bug\n
 &#8226; Fixed bugs related to adding widgets (Premium)\n
 &#8226; Added automatic backup option (Premium)\n
+&#8226; Fixed bugs related to attaching receipt images (Premium)\n
+&#8226; Fixed screen size usage when charting (Premium)\n
 	    </item>
 	    <item>\n
 &#8226; Fixed database backup and file export issues\n
