--- a/res/layout/trans_row_wide.xml
+++ b/res/layout/trans_row_wide.xml
@@ -32,6 +32,11 @@
 				android:id="@+id/AmountText" android:layout_gravity="right|center_vertical"
 				android:layout_weight="1" android:layout_height="fill_parent"
 				android:minWidth="100dip" android:layout_width="wrap_content" />
+			<TextView android:text="1215.00" android:gravity="right"
+				android:id="@+id/RunningBalanceText" android:layout_gravity="right|center_vertical"
+				android:layout_weight="1" android:layout_height="fill_parent"
+				android:minWidth="100dip" android:layout_width="wrap_content" 
+				android:visibility="gone" />
 		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
