--- a/res/layout/trans_row_wide_large.xml
+++ b/res/layout/trans_row_wide_large.xml
@@ -34,6 +34,11 @@
 				android:layout_weight="1" android:layout_height="fill_parent"
 				android:minWidth="100dip" android:layout_width="wrap_content"
 				android:textSize="16dip" />
+            <TextView android:text="1215.00" android:gravity="right"
+                android:id="@+id/RunningBalanceText" android:layout_gravity="right|center_vertical"
+                android:layout_weight="1" android:layout_height="fill_parent"
+                android:minWidth="100dip" android:layout_width="wrap_content"
+                android:textSize="16dip" android:visibility="gone" />
 		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
