--- a/res/layout/trans_row_narrow.xml
+++ b/res/layout/trans_row_narrow.xml
@@ -30,13 +30,12 @@
 				android:layout_width="wrap_content" android:layout_weight="2" />
 			<TextView android:layout_width="wrap_content" android:text="215.00"
 				android:gravity="right" android:id="@+id/AmountText"
-				android:layout_height="fill_parent" android:singleLine="false"
-				android:maxLines="1" android:lines="1" android:layout_weight="1" />
-            <TextView android:layout_width="wrap_content" android:text="1215.00"
-                android:gravity="right" android:id="@+id/RunningBalanceText"
-                android:layout_height="fill_parent" android:singleLine="false"
-                android:maxLines="1" android:lines="1" android:layout_weight="1" 
-                android:visibility="gone" />
+				android:layout_height="fill_parent" android:maxLines="1"
+				android:lines="1" android:layout_weight="1" />
+			<TextView android:layout_width="wrap_content" android:text="1215.00"
+				android:gravity="right" android:id="@+id/RunningBalanceText"
+				android:layout_height="fill_parent" android:maxLines="1"
+				android:lines="1" android:visibility="gone" android:minWidth="80dp" />
 		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
