--- a/res/layout/trans_row_narrow_large.xml
+++ b/res/layout/trans_row_narrow_large.xml
@@ -30,14 +30,13 @@
 				android:textSize="16dip" />
 			<TextView android:layout_width="wrap_content" android:text="215.00"
 				android:gravity="right" android:id="@+id/AmountText"
-				android:layout_height="fill_parent" android:singleLine="false"
+				android:layout_height="fill_parent" android:maxLines="1"
+				android:lines="1" android:layout_weight="1" android:textSize="16dip" />
+			<TextView android:layout_width="wrap_content" android:text="1215.00"
+				android:gravity="right" android:id="@+id/RunningBalanceText"
+				android:layout_height="fill_parent" android:minWidth="90dp"
 				android:maxLines="1" android:lines="1" android:layout_weight="1"
-				android:textSize="16dip" />
-            <TextView android:layout_width="wrap_content" android:text="1215.00"
-                android:gravity="right" android:id="@+id/RunningBalanceText"
-                android:layout_height="fill_parent" android:singleLine="false"
-                android:maxLines="1" android:lines="1" android:layout_weight="1"
-                android:textSize="16dip" android:visibility="gone" />
+				android:textSize="16dip" android:visibility="gone" />
 		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
