--- a/res/layout/trans_row_wide.xml
+++ b/res/layout/trans_row_wide.xml
@@ -5,8 +5,8 @@
 	android:paddingRight="5dip">
 	<CheckBox android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:id="@+id/PostedCheckBox"
-		android:layout_marginTop="-5dip" android:layout_marginBottom="-10dip"
-		android:focusable="false" android:focusableInTouchMode="false" />
+		android:layout_marginBottom="-10dip"
+		android:focusable="false" android:focusableInTouchMode="false" android:layout_marginTop="-7dp"/>
 	<LinearLayout android:id="@+id/LinearLayout02"
 		android:layout_width="wrap_content" android:layout_height="fill_parent"
 		android:layout_weight="1" android:orientation="vertical">
@@ -22,7 +22,7 @@
 				android:src="@drawable/ic_gallery" android:visibility="gone" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout03"
-			android:layout_height="wrap_content" android:layout_width="fill_parent">
+			android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="-5dp">
 			<TextView android:layout_width="wrap_content" android:text="2008-10-01"
 				android:id="@+id/DateText" android:ellipsize="end"
 				android:layout_gravity="left|center_vertical" android:paddingRight="0dip"
@@ -35,7 +35,7 @@
 			<TextView android:text="1215.00" android:gravity="right"
 				android:id="@+id/RunningBalanceText" android:layout_gravity="right|center_vertical"
 				android:layout_weight="1" android:layout_height="fill_parent"
-				android:minWidth="100dip" android:layout_width="wrap_content" 
+				android:minWidth="100dip" android:layout_width="wrap_content"
 				android:visibility="gone" />
 		</LinearLayout>
 	</LinearLayout>
