--- a/res/layout/repeat_list.xml
+++ b/res/layout/repeat_list.xml
@@ -3,5 +3,5 @@
 	android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" android:orientation="vertical">
 	<ListView android:layout_height="fill_parent"
-		android:layout_width="fill_parent" android:id="@+id/repeat_list"></ListView>
+		android:layout_width="fill_parent" android:id="@+id/repeat_list" />
 </LinearLayout>
