fixed bug re: crashing on import with no external storage available

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -74,6 +74,7 @@
 	<string-array name="changelog">
 	    <item>\n
 &#8226; Fixed bug which caused force closing when calculating running balances\n
+&#8226; Fixed bug which caused force closing when searching for importable files\n
 	    </item>
 	    <item>\n
 &#8226; Removed donation reminder\n
