--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -74,6 +74,7 @@
 	<string-array name="changelog">
 		<item>\n
 &#8226; Fixed bug calculating running balance while sorting from top\n
+&#8226; Added option to only search loot directory on external storage when scanning for files to import (Premium)\n
 		</item>
 	    <item>\n
 &#8226; Made the option to show colors on by default\n
